feat(lang): Added Hungarian translation (#246)
* Create hu.json

* Update en.json

* Add Hungarian language option

---------

Co-authored-by: MiaoMint <miaomint@0u0.ren>

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -4,6 +4,7 @@
     "en": "English",
     "es": "Español",
     "fr": "Français",
+    "hu": "Magyar",
     "hi": "हिंदी",
     "id": "Indonesia",
     "ja": "日本語",
