fix(lang): Update hu.json (#248)

--- a/assets/i18n/hu.json
+++ b/assets/i18n/hu.json
@@ -54,7 +54,7 @@
         "disconnect": "Lecsatlakozás"
     },
     "home": {
-        "continue-watching": "Tovább",
+        "continue-watching": "Folytatás",
         "favorite": "Kedvenc",
         "no-record": "Nincsenek kedvencek",
         "watched": "{ep} megtekintve",
